text align fix

--- a/less/pl-tables.less
+++ b/less/pl-tables.less
@@ -26,7 +26,7 @@ table {
 		color: lighten(@pl-text,10);
 		line-height: @baseLineHeight - 3;
 		font-size: @baseFontSize - 1;
-		text-align: left;
+		//text-align: left;
 		vertical-align: top;
 		border-top: 1px solid darken(@dark-base,8);
 	}
